[project]
name = "josie"
version = "0.1.0"
description = "Fork of the original code of \"JOSIE: Overlap Set Similarity Search for Finding Joinable Tables in Data Lakes\""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mmh3>=5.2.0",
    "numpy>=2.3.5",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.1.0",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]
